--- a/station/requirements.txt
+++ b/station/requirements.txt
@@ -1,3 +1,7 @@
 wrapt == 1.14.1
 PyYAML == 6.0
 paho-mqtt == 1.6.1
+Adafruit-Blinka == 7.2.0
+adafruit-circuitpython-bme280 == 2.6.13
+adafruit-circuitpython-pm25 == 2.1.9
+adafruit-circuitpython-sgp30==3.0.1
