--- a/iaq-station/application/resources/application.config.generic-pc.yml
+++ b/iaq-station/application/resources/application.config.generic-pc.yml
@@ -2,9 +2,13 @@ station:
   id: test-station-pc-1
 
 mqtt:
-  host: 192.168.1.1
-  port: 1884
+  #host: 192.168.1.1
+  host: a1p4xmzac7ibxf-ats.iot.us-east-1.amazonaws.com
+  port: 8883
   keepalive: 60
+  cert_filepath: certificate.pem.crt
+  private_key_filepath: private.pem.key
+  ca_filepath: root-CA.crt
 
 temperature:
   mqtt_topic: sensor/temperature
