successfully tested integration with aws-iot-device-sdk-v2, although it require some nasty hacks to make it work. Consider using aws Amplify

--- a/iaq-ui/package.json
+++ b/iaq-ui/package.json
@@ -21,6 +21,10 @@
     "@angular/platform-browser-dynamic": "~13.2.0",
     "@angular/router": "~13.2.0",
     "@stomp/stompjs": "^6.1.2",
+    "aws-crt": "^1.13.1",
+    "aws-iot-device-sdk-v2": "^1.8.5",
+    "aws-sdk": "^2.585.0",
+    "buffer": "^6.0.3",
     "chart.js": "^3.7.1",
     "chartjs-adapter-moment": "^1.0.0",
     "moment": "^2.29.3",
@@ -28,6 +32,7 @@
     "net": "^1.0.2",
     "ng2-charts": "^3.0.8",
     "ngx-mqtt": "^9.0.5",
+    "process": "^0.11.10",
     "rxjs": "~7.5.0",
     "sockjs-client": "^1.6.0",
     "stompjs": "^2.3.3",
