--- a/iaq-api/src/main/resources/application.properties
+++ b/iaq-api/src/main/resources/application.properties
@@ -1,2 +1,3 @@
-spring.profiles.active=awstimestream,inmemorydb
+spring.profiles.active=awstimestream,inmemorydb,paramstore
 #spring.profiles.active=mongo
+mqtt.configs.key=/iaq/mqtt.configs.key
