added timestream repositories for temp, humidity, co2, voc, pm25, and pm10. Nowgetting the stations and mqtt configs from param store

--- a/iaq-api/src/main/resources/application.properties
+++ b/iaq-api/src/main/resources/application.properties
@@ -1,3 +1,4 @@
 spring.profiles.active=awstimestream,inmemorydb,paramstore
 #spring.profiles.active=mongo
-mqtt.configs.key=/iaq/mqtt.configs.key
+mqtt.paramstore.configs.key=/iaq/mqtt.configs.key
+stations.paramstore.key=/iaq/stations
