--- a/iaq-api/src/main/resources/application.properties
+++ b/iaq-api/src/main/resources/application.properties
@@ -1,4 +1,10 @@
-spring.profiles.active=awstimestream,inmemorydb,paramstore
-#spring.profiles.active=mongo
+#
+#spring.profiles.active=awstimestream,inmemorydb,paramstore
+
+# local mongo without mqtt
+#spring.profiles.active=mongo,mqtt
+
+# local mqtt
+spring.profiles.active=mongo,mqtt
 mqtt.paramstore.configs.key=/iaq/mqtt.configs.key
 stations.paramstore.key=/iaq/stations
