--- a/iaq-station/application/resources/application.config.generic-local-pc.yml
+++ b/iaq-station/application/resources/application.config.generic-local-pc.yml
@@ -1,10 +1,10 @@
 station:
-  id: raspberry-pi-station
+  id: test-station-pc-1
 
 mqtt:
-  #host: a1p4xmzac7ibxf-ats.iot.us-east-1.amazonaws.com
-  #port: 8883
-  host: 192.168.1.1
+#  host: a1p4xmzac7ibxf-ats.iot.us-east-1.amazonaws.com
+#  port: 8883
+  host: localhost
   port: 1884
   keepalive: 60
   cert_filepath: certificate.pem.crt
