added HTTPS to API, fixed cloudwatch logs and permissions to communicate with paramstore and timestream

--- a/iaq-api/Dockerfile
+++ b/iaq-api/Dockerfile
@@ -1,7 +1,9 @@
 FROM amazoncorretto:11
-VOLUME /tmp
+#VOLUME /tmp
+WORKDIR /app
+COPY run.sh /app
 COPY target/*.jar app.jar
-ENTRYPOINT ["java", "-jar", "/app.jar"]
+ENTRYPOINT ["sh", "/app/run.sh"]
 
 # build with
 # docker build -t cmow5/iaq-api .
