--- a/iaq-api/src/main/resources/application.properties
+++ b/iaq-api/src/main/resources/application.properties
@@ -1,11 +1,32 @@
+##
+# PROFILE CONFIG
+##
 # prod settings
-#spring.profiles.active=awstimestream,inmemorydb,paramstore
+spring.profiles.active=awstimestream,inmemorydb,paramstore
 
 # local mongo without mqtt
 #spring.profiles.active=mongo,mqtt
 
 # local mqtt
-spring.profiles.active=mongo,mqtt
+#spring.profiles.active=mongo,mqtt
 
+##
+# PARAM STORE CONFIG
+##
 mqtt.paramstore.configs.key=/iaq/mqtt.configs.key
 stations.paramstore.key=/iaq/stations
+
+
+##
+# SSL CONFIG
+##
+# The format used for the keystore. It could be set to JKS in case it is a JKS file
+server.ssl.key-store-type=PKCS12
+# The path to the keystore containing the certificate
+server.ssl.key-store=/app/iaqapi.p12
+# The password used to generate the certificate
+server.ssl.key-store-password=password
+# The alias mapped to the certificate
+server.ssl.key-alias=iaqapi
+# https
+server.ssl.enabled=true
