added example command to run the docker container using the local credentials

--- a/iaq-api/Dockerfile
+++ b/iaq-api/Dockerfile
@@ -7,4 +7,10 @@ ENTRYPOINT ["sh", "/app/run.sh"]
 
 # build with
 # docker build -t cmow5/iaq-api .
+
+# run with
 #  docker run -p 8080:8080 --network=host cmow5/iaq-api
+
+# run the container using the local AWS credentials
+# docker run -p 8080:8080 --network=host -v /home/bit5/.aws/credentials:/root/.aws/credentials:ro cmow5/iaq-api
+# docker run -p 8080:8080 --network=host -v /home/bit5/.aws/credentials:/root/.aws/credentials:ro 354562611480.dkr.ecr.us-east-1.amazonaws.com/iaq-api:latest
