--- a/iaq-ui/package.json
+++ b/iaq-ui/package.json
@@ -43,6 +43,7 @@
     "@types/jasmine": "~3.10.0",
     "@types/node": "^12.11.1",
     "@types/sockjs-client": "^1.5.1",
+    "angular-cli-ghpages": "^1.0.3",
     "jasmine-core": "~4.0.0",
     "karma": "~6.3.0",
     "karma-chrome-launcher": "~3.1.0",
