added http connector for local testing

--- a/iaq-api/src/main/resources/application.properties
+++ b/iaq-api/src/main/resources/application.properties
@@ -2,13 +2,13 @@
 # PROFILE CONFIG
 ##
 # prod settings
-spring.profiles.active=awstimestream,inmemorydb,paramstore
+#spring.profiles.active=awstimestream,inmemorydb,paramstore
 
 # local mongo without mqtt
 #spring.profiles.active=mongo,mqtt
 
 # local mqtt
-#spring.profiles.active=mongo,mqtt
+spring.profiles.active=local,mongo,mqtt
 
 ##
 # PARAM STORE CONFIG
@@ -30,3 +30,6 @@ server.ssl.key-store-password=password
 server.ssl.key-alias=iaqapi
 # https
 server.ssl.enabled=true
+
+# http
+server.http.port=8081
