added server security using oauth with AWS cognito

--- a/iaq-api/src/main/resources/application.properties
+++ b/iaq-api/src/main/resources/application.properties
@@ -33,3 +33,5 @@ server.ssl.enabled=true
 
 # http
 server.http.port=8081
+
+spring.security.oauth2.resourceserver.jwt.issuer-uri: https://cognito-idp.us-east-1.amazonaws.com/us-east-1_epLveRyEy
