--- a/iaq-api/pom.xml
+++ b/iaq-api/pom.xml
@@ -76,6 +76,16 @@
 			<version>${aws.sdk.version}</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-security</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-oauth2-resource-server</artifactId>
+		</dependency>
+
 		<!--
 		<dependency>
 			<groupId>software.amazon.awssdk</groupId>
