added support for interval queries so we don't overwhelm timestream with 1 second granularity for queries > 1 hour

--- a/iaq-api/src/main/resources/application.properties
+++ b/iaq-api/src/main/resources/application.properties
@@ -4,6 +4,9 @@
 # prod settings
 spring.profiles.active=awstimestream,inmemorydb,paramstore
 
+# aws with local http
+#spring.profiles.active=local,awstimestream,inmemorydb,paramstore
+
 # local mongo without mqtt
 #spring.profiles.active=mongo,mqtt
 
