--- a/iaq-ui/angular.json
+++ b/iaq-ui/angular.json
@@ -28,6 +28,7 @@
             "inlineStyleLanguage": "sass",
             "assets": [
               "src/favicon.ico",
+              "src/favicon.png",
               "src/assets"
             ],
             "styles": [
